modemmanager (1.6.4-1) UNRELEASED; urgency=medium

  * New upstream release.

 -- Michael Biebl <biebl@debian.org>  Wed, 16 Nov 2016 18:50:41 +0100

modemmanager (1.6.2-1) unstable; urgency=medium

  * New upstream release.
  * Bump debhelper compat level to 10.

 -- Michael Biebl <biebl@debian.org>  Sat, 17 Sep 2016 09:32:49 +0200

modemmanager (1.6.0-1) unstable; urgency=medium

  * New upstream release.

 -- Michael Biebl <biebl@debian.org>  Thu, 28 Jul 2016 15:39:57 +0200

modemmanager (1.5.993-1) unstable; urgency=medium

  * New upstream release (1.6-rc4).
  * Update Build-Depends as per configure.ac.
  * Install bash-completion file for mmcli.
  * Update symbols file.
  * Enable suspend/resume support. Requires libsystemd.
  * Bump Standards-Version to 3.9.8.

 -- Michael Biebl <biebl@debian.org>  Fri, 08 Jul 2016 02:19:24 +0200

modemmanager (1.4.14-1) unstable; urgency=medium

  [ Laurent Bigonville ]
  * New upstream release.
  * debian/control: Fix capitalisation of Bluetooth (Closes: #754439)
  * Remove modemmanager-dbg package and rely on automatic dbgsym package
  * debian/control: Fix Vcs-Git URL (again) to please lintian
  * debian/control: Bump Standards-Version to 3.9.7 (no further changes)

  [ Michael Biebl ]
  * Remove outdated debian/README.source.
  * Use https:// for upstream homepage.
  * Bump Build-Depends on debhelper for dh_strip --dbgsym-migration support.
  * Drop Ubuntu specific upstart job now that Ubuntu has switched to systemd as
    well. (Closes: #804054)

 -- Michael Biebl <biebl@debian.org>  Wed, 23 Mar 2016 21:30:46 +0100

modemmanager (1.4.12-1) unstable; urgency=medium

  * New upstream release.

 -- Michael Biebl <biebl@debian.org>  Thu, 08 Oct 2015 12:47:56 +0200

modemmanager (1.4.10-1) unstable; urgency=medium

  * New upstream release.
    - Blacklist: ignore devices from Posnet Polska S.A. (Closes: #791341)

 -- Michael Biebl <biebl@debian.org>  Sun, 26 Jul 2015 20:43:23 +0200
