@@ -1,6 +1,8 @@
 modemmanager (1.6.4-1) UNRELEASED; urgency=medium
 
   * New upstream release.
+  * Drop overrides for dh_systemd_start and dh_installinit.
+    Starting with compat level 10, --restart-after-upgrade is the default.
 
  -- Michael Biebl <biebl@debian.org>  Wed, 16 Nov 2016 18:50:41 +0100
 
